# data_engineer_assessment

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml
config/: config.py
data_engineer_assessment/extract/: extract.py
data_engineer_assessment/load/: load.py
data_engineer_assessment/transform/: transform.py
tests/: test_extract.py  test_load.py  test_transform.py
