[tool.poetry]
name = "data-engineer-assessment"
version = "0.1.0"
description = "Data integration assessment for data engineer role."
authors = ["Carlos Pimentel <costa.pimentel@ubi.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
